# myqa-is

./: .cursorrules  .env.example  .env.test  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc.json  Anchor.toml  README.md  docker-compose.yml  nixpacks.toml  package.json  pnpm-lock.yaml  railway.json  rust-toolchain.toml  vite.config.ts
.github/: main.yml
app/: .dockerignore  .env.example  .env.test  Dockerfile  README.md  __Dockerfile  auth.server.ts  nixpacks.toml  package.json  pnpm-lock.yaml  railway.json  remix-sitemap.config.js  root.tsx  tailwind.config.js  tsconfig.json  vite.config.ts
app/app/: auth.server.ts  entry.server.tsx  root.tsx  session.server.ts
app/app/config/: marketplace.client.ts
app/app/hooks/: use-anchor-program.client.ts  use-anchor-program.ts  use-marketplace.client.ts  use-marketplace.ts
app/app/lib/: currency.ts
app/app/mocks/: server.ts
app/app/provider/: solana-wallet-provider.tsx  (+1 more)
app/prisma/: schema.prisma  seed.mts
app/provider/: solana-wallet-provider.tsx  user-provider.tsx
app/routes/: _index.tsx  api.health.tsx  auth.google.callback.tsx  dashboard.tsx  login.tsx  onboarding.tsx  register.tsx
app/test/: setup.ts
app/utils/: error-response.ts  file-upload-handler.ts
deploy/scripts/: utils.ts
prisma/: schema.prisma
programs/myfaq-is/: Cargo.toml
programs/myfaq-is/src/: lib.rs
programs/myqa/: Cargo.toml
scripts/: deploy-to-devnet.ts  generate-all-keys.ts  initialize-contract.ts  mint-test-bonk.ts  setup-solana-contract-dev.sh  start-localnet.ts
tests/: myfaq-is.ts  myqa.ts
(+102 files in other folders)
