[package]
name = "myfaq-is"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "myfaq_is"

[features]
default = []
test = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["token", "metadata", "associated_token"] }
mpl-token-metadata = { version = "1.13.2", features = ["no-entrypoint"], optional = true }
solana-program = "=1.16.18"
spl-token = "=4.0.0"
spl-memo = "=4.0.0"